name:                hogerlager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hogerlager#readme
license:             BSD3
license-file:        LICENSE
author:              Felix Van der Jeugt
maintainer:          felix.vanderjeugt@ugent.be
copyright:           2021 Felix Van der Jeugt
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hogerlager
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.2.0 && < 1.3
